--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "prettier": "^2.0.5",
     "react": "17.0.1",
     "react-test-renderer": "17.0.1",
-    "react-native": "0.64.2"
+    "react-native": "0.64.2",
+    "react-native-gesture-handler": "^2.4.1",
+    "react-native-reanimated": "^2.8.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
